<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_teams"
        android:icon="@drawable/ic_group_grey_24dp"
        android:onClick="NavMenuClickListener"
        android:title="@string/title_teams" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:onClick="NavMenuClickListener"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_event_black_24dp"
        android:onClick="NavMenuClickListener"
        android:title="@string/title_schedule" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_chat_black_24dp"
        android:onClick="NavMenuClickListener"
        android:title="@string/title_messages" />
</menu>
